ecmascript/parser/tests/test262-error-references/fail/aae5dc521eff47c4.js.stderr
error: TS1056
 --> $DIR/tests/test262-parser/fail/aae5dc521eff47c4.js:1:15
  |
1 | class a { set foo(...v) {} };
  |               ^^^

